--- a/specification/draft/apps.mdx
+++ b/specification/draft/apps.mdx
@@ -356,9 +356,9 @@ If the Host is a web page, it MUST wrap the Guest UI and communicate with it thr
 3. The Sandbox MUST send a `ui/notifications/sandbox-ready` notification to the host when it’s ready to process an `ui/sandbox-resource-ready` notification.
 4. Once the Sandbox is ready, the Host MUST send the raw HTML resource to load in a `ui/notifications/sandbox-resource-ready` notification.
 5. The Sandbox MUST load the raw HTML of the Guest UI with CSP settings that:
-   - Enforce the domains declared in `ui.csp` metadata
-   - Prevent nested iframes (`frame-src 'none'`)
-   - Block dangerous features (`object-src 'none'`, `base-uri 'self'`)
+   - Enforce the domains declared in the `ui.csp` resource metadata
+   - Block nested iframes on domains NOT listed in `csp.frameDomains` (or on hosts that don't support the hostCapability.externalIframe cap)
+   - Block dangerous features (`object-src 'none'`)
    - Apply restrictive defaults if no CSP metadata is provided
 6. The Sandbox MUST forward messages sent by the Host to the Guest UI, and vice versa, for any method that doesn’t start with `ui/notifications/sandbox-`. This includes lifecycle messages, e.g., `ui/initialize` request & `ui/notifications/initialized` notification both sent by the Guest UI. The Host MUST NOT send any request or notification to the Guest UI before it receives an `initialized` notification.
 7. The Sandbox SHOULD NOT create/send any requests to the Host or to the Guest UI (this would require synthesizing new request ids).
@@ -1116,7 +1116,6 @@ const cspValue = `
   font-src 'self' ${csp?.resourceDomains?.join(' ') || ''};
   frame-src 'none';
   object-src 'none';
-  base-uri 'self';
 `;
 ```
 
