--- a/specification/draft/apps.mdx
+++ b/specification/draft/apps.mdx
@@ -565,7 +565,7 @@ Host SHOULD add the message to the conversation thread, preserving the specified
 }
 ```
 
-Guest UI MAY send this request to inform the agent about app state changes that should be stored in the conversation context for future reasoning. This event serves a different use case from `notifications/message` (logging) and `ui/message` (which also trigger followups).
+Guest UI MAY send this request to inform the agent about app state changes that should be stored in the conversation context for future reasoning. This event serves a different use case from `notifications/message` (logging) and `ui/message` (which also trigger follow-ups).
 
 Host behavior:
 - SHOULD store the context update in the conversation context
