--- a/specification/draft/apps.mdx
+++ b/specification/draft/apps.mdx
@@ -379,7 +379,7 @@ UI iframes can use the following subset of standard MCP protocol messages:
 
 **Notifications:**
 
-- `notifications/message` - Log messages to host (for logging)
+- `notifications/message` - Log messages to host
 
 **Lifecycle:**
 
